# mgx10v_sensor

./: .gitignore
scripts/: extract_cam_photos.py  extract_gnss_trajectory.py  extract_imu.py  plot_sensor_timestamps.py
src/control_web/: README.md  control_server.py  start_control_web.sh
src/control_web/static/: app.js  index.html  style.css
src/control_web/tests/: test_control_server.py
src/image_tcp_bridge/: CMakeLists.txt  README.md  build.sh  recv_tcp_image.py  start_image_tcp_bridge.sh
src/image_tcp_bridge/proto/: Common.proto  GnssMsg.proto  ImuMsg.proto  RawImageMsg.proto
src/image_tcp_bridge/src/: image_tcp_bridge.cpp
src/sensor_data/: CAMERA_RESOLUTION.md  CMakeLists.txt  DEPLOYMENT.md  README.md  build.sh  start_sensor_data.sh  start_vendor_pwm.sh  stop_sensor_data.sh  stop_vendor_pwm.sh
src/sensor_data/include/: bounded_frame_queue.h  camera_timestamp_assignment.h  exposure_timestamp.h  frame_timestamp_tracker.h  pair_matcher.h  serial_port.h  shm_image_ring_layout.h  types.h  zmq_publisher.h
src/sensor_data/proto/: RawImageMsg.proto
src/sensor_data/src/: cam_sensor_data.cpp  gnss_sensor_data.cpp  imu_sensor_data.cpp  pair_matcher.cpp  serial_port.cpp  zmq_publisher.cpp
src/sensor_data/tests/: bounded_frame_queue_test.cpp  camera_timestamp_assignment_test.cpp  exposure_timestamp_test.cpp  frame_timestamp_tracker_test.cpp  gnss_fill_test.cpp  timestamp_conversion_test.cpp
src/sensor_recorder/: CMakeLists.txt  README.md  build.sh  config.yaml
src/sensor_recorder/src/: main.cpp  receiver_runtime.cpp  receiver_runtime.h  record_writer.cpp  record_writer.h  recorder_config.cpp  recorder_config.h  shared_image_reader.cpp  shared_image_reader.h
src/sensor_recorder/tests/: receiver_runtime_test.cpp  record_writer_test.cpp  recorder_config_test.cpp
src/sensor_replay/: CMakeLists.txt  README.md  build.sh  config.yaml
src/sensor_replay/src/: main.cpp  replay_config.cpp  replay_config.h  replay_index.cpp  replay_index.h  replay_timing.cpp  replay_timing.h
src/sensor_replay/tests/: replay_config_test.cpp  replay_index_test.cpp  replay_timing_test.cpp
src/sensor_sanity_check/: CMakeLists.txt  README.md  build.sh  config.yaml
src/sensor_sanity_check/src/: chunk_reader.cpp  chunk_reader.h  main.cpp  sanity_config.cpp  sanity_config.h  timestamp_extractor.cpp  timestamp_extractor.h
src/sensor_sanity_check/tests/: chunk_reader_test.cpp  sanity_config_test.cpp  timestamp_extractor_test.cpp
